# Nausica

./: README.md
backend/: .gitignore  main.py  pyproject.toml
backend/files/: bcorp_links.csv  cosing_prohibited_output.csv  merged_cosing_sin_output.csv  sin_list_output.csv
backend/scrapers/: bcorp.py  chemsec_sin_list.py  clean_duplicates.py  combine_cosing_sin.py  cosing_prohibited_list.py  cosmos_approved.py  cosmos_certified.py  cosmos_products.py
frontend/: package-lock.json
